--- a/portfolio_site/portfolio/templates/base.html
+++ b/portfolio_site/portfolio/templates/base.html
@@ -20,7 +20,8 @@
     {% endif %}
 
     <link rel="stylesheet" href="{% static 'css/portfolio.css' %}">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
     {% block extra_css %}{% endblock %}
 </head>
 <body class="{% block body_class %}{% endblock %}">
